# agent_dev_boilerplate

./: .env.example  .gitignore  .readme_project_manifest.json  GUIDE.md  LICENSE  Makefile  README.md  business_context.example.yaml  pipeline_context.json  prompt_for_agent_template_structure.md  pyproject.toml  todo_tools.md
agent_forge/: __init__.py  __main__.py  cli.py  scaffold.py
agents/: knowledge_changelog.md
checklists/: acquisition_checklist.yaml  avatar_clarity_checklist.yaml  business_scorecard_checklist.yaml  competitor_monitoring_checklist.yaml  context_compaction_checklist.yaml  cross_source_validation_checklist.yaml  delivery_system_checklist.yaml  ethical_marketing_checklist.yaml  funnel_quality_checklist.yaml  github_ready_checklist.yaml  global_agent_best_practices.yaml  high_ticket_offer_checklist.yaml  knowledge_base_checklist.yaml  market_quality_checklist.yaml  pricing_guarantee_checklist.yaml  proof_engine_checklist.yaml  reference_integrity_checklist.yaml  research_source_checklist.yaml  retention_upsell_checklist.yaml  sales_process_checklist.yaml  tool_safety_checklist.yaml  value_stack_checklist.yaml  web_tool_provider_checklist.yaml
core/: __init__.py  agent_loader.py  business_context_schema.py  checklist_runner.py  competitor_monitor.py  context_compactor.py  cross_source_analyzer.py  eval_runner.py  guardrails.py  knowledge_loader.py  logger.py  memory_manager.py  offer_schema.py  output_templates.py  pipeline_context.py  reference_manager.py  research_rag.py  research_reporter.py  schema.py  scorecard_schema.py  source_collector.py  source_registry.py  source_signal_scorer.py  tool_registry.py  yaml_utils.py
dashboard/: index.html  server.py
prompts/: acquisition_strategy_prompt.md  agent_self_review_prompt.md  avatar_pain_research_prompt.md  business_scorecard_prompt.md  compact_context_prompt.md  content_authority_prompt.md  delivery_system_prompt.md  eval_generation_prompt.md  funnel_builder_prompt.md  knowledge_extract_prompt.md  market_selection_prompt.md  objection_handler_prompt.md  offer_audit_prompt.md  pricing_guarantee_prompt.md  proof_engine_prompt.md  retention_upsell_prompt.md  sales_script_prompt.md  self_review_prompt.md  value_stack_prompt.md
scenarios/: README.md
scripts/: _common_generation.py  add_research_source.py  analyze_cross_source_signals.py  analyze_source.py  bump_version.py  collect_all_sources.py  collect_source.py  compact_context.py  compare_web_tools.py  (+41 more)
(+499 files in other folders)
